[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/Title/title_x8_06.png" type="Texture" id=1]
[ext_resource path="res://src/Title/title_megaman.png" type="Texture" id=2]
[ext_resource path="res://src/Title/IntroANim.gd" type="Script" id=3]
[ext_resource path="res://src/Title/title_x8_00.png" type="Texture" id=4]
[ext_resource path="res://src/Title/title_x8_01.png" type="Texture" id=5]
[ext_resource path="res://src/Title/title_x8_04.png" type="Texture" id=6]
[ext_resource path="res://src/Title/title_x8_05.png" type="Texture" id=7]
[ext_resource path="res://src/Title/title_x8_03.png" type="Texture" id=8]
[ext_resource path="res://src/Title/title_x_bg.png" type="Texture" id=10]
[ext_resource path="res://src/Title/title_gradient_bg.png" type="Texture" id=11]
[ext_resource path="res://src/Title/title_bg.png" type="Texture" id=12]
[ext_resource path="res://src/Title/title_electronics_bg.png" type="Texture" id=13]
[ext_resource path="res://src/Title/title_wtf_bg.png" type="Texture" id=14]
[ext_resource path="res://src/Title/IntroBGAnim.gd" type="Script" id=15]
[ext_resource path="res://src/Sounds/16 - MMX - X Upgrade Complete.wav" type="AudioStream" id=16]
[ext_resource path="res://src/Title/title_xx_bg.png" type="Texture" id=17]
[ext_resource path="res://src/Title/X8Intro.gd" type="Script" id=18]
[ext_resource path="res://src/Fonts/x8_bitmapfont.tres" type="BitmapFont" id=19]

[node name="IntroAnim" type="Node2D"]
script = ExtResource( 18 )

[node name="bg_anim" type="Node" parent="."]
script = ExtResource( 15 )

[node name="bg_mask" type="Light2D" parent="bg_anim"]
position = Vector2( 199, 112 )
texture = ExtResource( 10 )
mode = 3
range_item_cull_mask = 16

[node name="bg" type="Sprite" parent="bg_anim"]
visible = false
light_mask = 16
position = Vector2( 198, 112 )
scale = Vector2( 1e-05, 1e-05 )
z_index = -3
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 0, 396, 224 )

[node name="bg_mask3" type="Light2D" parent="bg_anim"]
position = Vector2( 199, 112 )
texture = ExtResource( 10 )
mode = 3
range_item_cull_mask = 16

[node name="bg4" type="Sprite" parent="bg_anim"]
visible = false
light_mask = 16
position = Vector2( 198, 112 )
scale = Vector2( 1e-05, 1e-05 )
z_index = -3
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 0, 396, 224 )

[node name="bg_mask2" type="Light2D" parent="bg_anim"]
position = Vector2( 199, 112 )
texture = ExtResource( 17 )
mode = 3
range_item_cull_mask = 1024

[node name="xx" type="Sprite" parent="bg_anim"]
visible = false
light_mask = 1024
position = Vector2( 198, 112 )
scale = Vector2( 1e-05, 1e-05 )
z_index = -3
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 0, 396, 224 )

[node name="bg2_mask" type="Light2D" parent="bg_anim"]
position = Vector2( 199, 112 )
texture = ExtResource( 13 )
mode = 3
range_item_cull_mask = 512

[node name="bg2" type="Sprite" parent="bg_anim"]
visible = false
light_mask = 512
position = Vector2( 198, 112 )
scale = Vector2( 1e-05, 1e-05 )
z_index = -3
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 0, 396, 224 )

[node name="bg3_mask" type="Light2D" parent="bg_anim"]
position = Vector2( 199, 112 )
texture = ExtResource( 14 )
mode = 3
range_item_cull_mask = 8

[node name="bg3" type="Sprite" parent="bg_anim"]
visible = false
light_mask = 8
position = Vector2( 198, 112 )
scale = Vector2( 1e-05, 1e-05 )
z_index = -4
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 0, 396, 224 )

[node name="title_card_intro" type="Node" parent="."]
script = ExtResource( 3 )
dark_megaman_color = Color( 0.196078, 0.219608, 0.219608, 0.137255 )
fade_color = Color( 0, 0, 0, 0 )
start_megaman_position = Vector2( 280, 20 )
final_megaman_position = Vector2( 160, 60 )

[node name="megaman" type="Sprite" parent="title_card_intro"]
visible = false
position = Vector2( 160, 60 )
texture = ExtResource( 2 )

[node name="megaman2" type="Sprite" parent="title_card_intro"]
visible = false
position = Vector2( 160, 60 )
texture = ExtResource( 2 )

[node name="x8_big" type="Sprite" parent="title_card_intro"]
visible = false
position = Vector2( 260, 56 )
z_index = 1
texture = ExtResource( 4 )

[node name="x8_outer" type="Sprite" parent="title_card_intro"]
visible = false
position = Vector2( 260, 56 )
z_index = 1
texture = ExtResource( 5 )

[node name="x8_color" type="Sprite" parent="title_card_intro"]
visible = false
position = Vector2( 260, 56 )
z_index = 1
texture = ExtResource( 1 )

[node name="x8_shineleft" type="Sprite" parent="title_card_intro"]
visible = false
position = Vector2( 260, 56 )
z_index = 1
texture = ExtResource( 8 )

[node name="x8_shineright" type="Sprite" parent="title_card_intro"]
visible = false
position = Vector2( 260, 56 )
z_index = 1
texture = ExtResource( 7 )

[node name="x8_shinefull" type="Sprite" parent="title_card_intro"]
visible = false
position = Vector2( 260, 56 )
z_index = 1
texture = ExtResource( 6 )

[node name="twish" type="AudioStreamPlayer" parent="title_card_intro"]
stream = ExtResource( 16 )
volume_db = -18.0
bus = "SFX"

[node name="demo_02" type="Label" parent="title_card_intro"]
visible = false
margin_left = 170.0
margin_top = 197.0
margin_right = 226.0
margin_bottom = 224.0
custom_colors/font_color = Color( 0.639216, 0.713726, 0.898039, 1 )
custom_colors/font_color_shadow = Color( 0.270588, 0.270588, 0.270588, 1 )
custom_fonts/font = ExtResource( 19 )
text = "Demo 02
V.0.3.0.2"
align = 1

[node name="blackness" type="Sprite" parent="title_card_intro"]
visible = false
position = Vector2( 198, 112 )
z_index = 2
texture = ExtResource( 12 )

[node name="blackness2" type="Sprite" parent="title_card_intro"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 199, 113 )
z_index = -1000
texture = ExtResource( 12 )
